Style fix for overflowing metrics table, make remove_section method static, fix related unit test

--- a/src/styles/components/_integrations.scss
+++ b/src/styles/components/_integrations.scss
@@ -25,6 +25,14 @@ $ddpurple:    #632CA6;
     max-width: 100%;
     height: auto;
   }
+
+  table.table-metrics {
+    tr {
+      td {
+        word-break: break-word;
+      }
+    }
+  }
 }
 
 .filters {
